# okdinghy_v2

./: .gitignore  runTmuxDevSession.sh
Okdinghy v2 django project/: pyproject.toml
Okdinghy v2 django project/core/core/: settings.py
